refactor: update controllers, services, entities, DTOs, security, and remove legacy files